@@ -1,3 +1,7 @@
+2007-10-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/reader.R (readDOC): Added MS Word reader (using antiword).
+
 2007-10-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/weight.R: Weighting functions for TermDocMatrix.
